hexo公司电脑修改

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 我的博客
-subtitle: 我的博客
-description: 我的博客
+title: 林炳文我的博客
+subtitle: 林炳文我的博客
+description: 林炳文我的博客
 author: lin Bingwen
 language: zh-CN
 timezone:
